package com.phlink.example.server.service.push;import com.phlink.grpc.examples.proto.ClientInfo;import com.phlink.grpc.examples.proto.Status;import com.phlink.grpc.examples.proto.TopicInfo;import io.grpc.stub.StreamObserver;public interface IClientCache <T>{	public void loginToServer(TopicInfo topicInfo, StreamObserver<T> observer);	public boolean removeErrorObserver(String clientId);	public StreamObserver<T> getObserver(String clientId);		public Status logoutFromServer(ClientInfo clientInfo);		public StreamObserver<T> getObserver(ClientInfo clientInfo);		public void clearErrorObserver();}